First Pass of Settings Complete
* Set list type, list item format, and clipboard format
* Get feedback in the Chrome extension options UI
* Functional but rough. Haha, Javascript ;-)

--- a/options.html
+++ b/options.html
@@ -17,7 +17,7 @@
     	margin-bottom:1em;
     }
     
-    .sampletext {
+    #sampletext {
     	color:#6C6C6C;
     	margin-bottom:.4em;
     	display:block;
@@ -51,7 +51,7 @@
 
 <div class="options">
 	<label for="list_item_format">List Item Format</label>
-	<span class="sampletext"></span>
+	<span id="sampletext"></span>
 	<select id="list_item_format">
 		<option value="title">Tab Title Only</option>
 		<option value="url">Url Only</option>
@@ -60,9 +60,8 @@
 </div>
 
 <div id="status"></div>
+
 <button id="saveoptions">Save</button>
-
-
 
 </body>
 </html>
