--- a/options.html
+++ b/options.html
@@ -21,6 +21,13 @@
     	margin-bottom:1em;
     }
     
+    .subhead {
+    	font-size:.8em;
+        font-style: italic;
+        color:#6C6C6C;
+        margin-bottom:.4em;
+    }
+    
     #clipboard_feedback {
     	margin-bottom:.4em;
     }
@@ -79,6 +86,12 @@
 		<option value="html" id="clipboard_format_html" >HTML</option>
 		<option value="text" id="clipboard_format_text">Plain Text</option>
 	</select>
+</div>
+
+<div class="options">
+	<label for="domain_filter">Pattern Filter</label>
+    <div class="subhead">(Ignore tabs matching pattern. Comma separated list.)</div>
+	<input type="text" id="domain_filter" placeholder="">
 </div>
 
 <div id="status"></div>
